--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   background-color: #131921;
   position: sticky;
-  /* top: 0; */
-  /* z-index: 100; */
+  top: 0;
+  z-index: 100;
 }
 
 .headerLogo {
