--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -42,6 +42,7 @@
 .headerNav {
   display: flex;
   justify-content: space-evenly;
+  text-decoration: none;
 }
 
 .headerOption {
@@ -50,6 +51,7 @@
   margin-left: 10px;
   margin-right: 10px;
   color: white;
+  text-decoration: none;
 }
 
 .headerOptionLineOne {
@@ -57,6 +59,12 @@
   font-size: 10px;
 }
 
+.headerOption > a {
+  text-decoration: none;
+}
+.headerOptionLineOne > a {
+  text-decoration: none;
+}
 .headerOptionLineTwo {
   text-decoration: none;
   font-size: 13px;
